--- a/node/package.json
+++ b/node/package.json
@@ -14,7 +14,8 @@
     "source-map-support": "0.4.0",
     "uuid":"3.3.3",
     "directory-tree": "^2.1.0",
-    "fs-extra": "^4.0.2"
+    "fs-extra": "^4.0.2",
+    "nodegit":"0.26.2"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
