--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-router": "^3.0.2",
     "react-split-pane":"0.1.87",
     "monaco-editor":"0.19.0",
-    "monaco-editor-webpack-plugin":"1.8.1"
+    "monaco-editor-webpack-plugin":"1.8.1",
+    "react-ryui":"^1.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
@@ -51,6 +52,8 @@
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
     "webpack-devserver": "0.0.6",
-    "@types/node": "12.7.5"
+    "@types/node": "12.7.5",
+    "@types/react": "^16.0.25",
+    "@types/react-dom":"16.9.4"
   }
 }
