--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "vscode-online",
+  "name": "workbench",
   "version": "0.0.2",
-  "description": "",
+  "description": "workbench",
   "main": "index.js",
   "scripts": {
     "build": "NODE_ENV=production webpack --progress -p",
     "start": "NODE_ENV=development webpack-dev-server --progress --hot"
   },
-  "author": "",
+  "author": "dyl",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.17.1",
