--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "NODE_ENV=production webpack --progress -p",
-    "start": "NODE_ENV=development webpack-dev-server --progress --hot"
+    "start": "NODE_ENV=development webpack-dev-server --progress --hot",
+    "micro": "NODE_ENV=production NODE_TYPE=micro_app webpack --progress -p"
   },
   "author": "dyl",
   "license": "ISC",
